tests/expectations/compiler/function/self_fail.out
Error [EPAR0370054]: The allowed accesses to `self` are `self.{caller, checksum, edition, program_owner, signer, address, id}`.
    --> compiler-test:4:16
     |
   4 |         return self.foo == addr;
     |                ^^^^^^^^
